Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2023-09-09:

- Fixed incorrect rejection of the tab key while reading input using the `read`
  built-in command. Bugs introduced on 2021-02-26 (emacs) and 2022-08-24 (vi).

- Fixed a minor bug that could cause '/opt/ast/bin/getconf PID_MAX' to
  return the wrong value when ksh is built with strict C99.

2023-06-13:

- Release 1.0.6.

- Fixed a serious regression in pathname expansion where quoted wildcard
  characters were incorrectly expanded if a pattern contains both a brace
  expansion and a variable expansion.

2023-06-12:

- Fixed a bug where ^X^E in emacs or 'v' in vi, which invoke a full-screen
  editor to edit the command line, could cause the wrong command line to be
  edited if two shell sessions share a .sh_history file.

- In the emacs line editor, ^X^E no longer echos the hist command it invokes.

2023-06-10:

- Ksh can now compile on most operating systems when using -std=c99 in CCFLAGS.

2023-06-09:

- Fixed a bug where the 'break' and 'continue' commands stopped working after
  changing scope levels (.sh.level=n) within a loop invoked from a DEBUG trap.

2023-06-07:

- Release 1.0.5.

2023-06-05:

- Fixed a bug in command completion: when a shell built-in or defined function
  was preceded in alphabetical order by an undefined function (on FPATH or
  after 'autoload'), the built-in or defined function failed to tab-complete.

2023-06-04:

- Fixed a bug in 'case', introduced in ksh 93t 2008-10-31, where extended
  patterns containing a closing brace ('}') caused a spurious syntax error.

- The POSIX mode was amended to make 'test -e /dev/fd/n' (where n is a file
  descriptor number) actually test for the existence of /dev/fd/n in the
  file system. By default it tests if that file descriptor is open.

2023-06-02:

- Fixed a bug introduced on 2021-04-24 where unsetting a function in a
  subshell hides any built-in command by the same name for the duration