@@ -88,7 +88,7 @@ cat{
 	extern Time_t		tmxscan(const char*, char**, const char*, char**, Time_t, long);
 	extern int		tmxsleep(Time_t);
 	extern Time_t		tmxtime(Tm_t*, int);
-	extern Tm_t*		tmxtm(Tm_t*, Time_t, Tm_zone_t*);
+	extern Tm_t*		tmxtm(Tm_t*, Time_t, Tm_zone_t*, const char);
 
 	extern Time_t		tmxgettime(void);
 	extern int		tmxsettime(Time_t);
